RESOLVED FIXED51568
Ensure that we are not getting too many mouse move events
https://bugs.webkit.org/show_bug.cgi?id=51568
Summary Ensure that we are not getting too many mouse move events
Anders Carlsson
Reported 2010-12-23 15:47:29 PST
Ensure that we are not getting too many mouse move events
Attachments
Patch (3.26 KB, patch)
2010-12-23 15:50 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2010-12-23 15:50:28 PST
Anders Carlsson
Comment 2 2010-12-23 15:55:56 PST
Note You need to log in before you can comment on or make changes to this bug.